--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                     
                     <a href="#" class="footer__link"><i class="bx bxl-twitter"></i></a>
                 </div>
-                <p class="footer__copy">All right reserved by Moyo - 2023</p>
+                <p class="footer__copy">All right reserved by Ashwani - 2023</p>
             </div>
         </footer>
         <!--===== MAIN JS =====-->
